--- a/app/src/main/res/layout/activity_add_route.xml
+++ b/app/src/main/res/layout/activity_add_route.xml
@@ -17,7 +17,7 @@
 
 
         <Button
-            android:id="@+id/btnSearch"
+            android:id="@+id/button"
             android:layout_width="139dp"
             android:layout_height="49dp"
             android:layout_marginStart="8dp"
@@ -44,11 +44,11 @@
             android:text="Route No"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
+            app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textViewSignup"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
             android:layout_marginStart="28dp"
@@ -68,7 +68,7 @@
             android:text="Start time"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/textViewSignup"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -100,8 +100,7 @@
             tools:text="To" />
 
         <EditText
-
-
+            android:id="@+id/admin_etime"
             android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -110,13 +109,13 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="24sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSignup"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textViewSignup" />
+            app:layout_constraintStart_toEndOf="@+id/textView3" />
 
         <EditText
-
+            android:id="@+id/admin_rnumber"
             android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -126,13 +125,13 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
+            app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textView" />
 
         <EditText
-
+            android:id="@+id/admin_to"
             android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -143,25 +142,14 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="24sp"
-
-            app:layout_constraintBottom_toTopOf="@+id/txtTime"
+            app:layout_constraintBottom_toTopOf="@+id/admin_stime"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textview"
-            app:layout_constraintTop_toBottomOf="@+id/seatNo" />
+            app:layout_constraintTop_toBottomOf="@+id/admin_from" />
 
         <EditText
-            android:id="@+id/seatNo"
-
-            app:layout_constraintBottom_toTopOf="@+id/admin_stime_ud"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textview"
-            app:layout_constraintTop_toBottomOf="@+id/admin_from_ud" />
-
-        <EditText
-            android:id="@+id/admin_from_ud"
-
+            android:id="@+id/admin_from"
             android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -176,8 +164,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView4" />
 
         <EditText
-
-
+            android:id="@+id/admin_stime"
             android:layout_width="265dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -188,8 +175,7 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="24sp"
-
-
+            app:layout_constraintBottom_toTopOf="@+id/admin_etime"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textView2"
@@ -210,8 +196,7 @@
             android:textColorLink="#00CE1B1B"
             android:textSize="28sp"
             android:textStyle="bold"
-
-
+            app:layout_constraintBottom_toTopOf="@+id/admin_from"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.615"
             app:layout_constraintStart_toStartOf="parent"
