--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -20,7 +20,7 @@
         tools:layout_editor_absoluteY="88dp">
 
         <Button
-            android:id="@+id/btnSearch"
+            android:id="@+id/button"
             android:layout_width="142dp"
             android:layout_height="53dp"
             android:layout_marginStart="8dp"
@@ -46,11 +46,11 @@
             android:layout_marginBottom="50dp"
             android:text="Route No"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
+            app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textViewSignup"
+            android:id="@+id/textView3"
             android:layout_width="81dp"
             android:layout_height="23dp"
             android:layout_marginStart="28dp"
@@ -68,7 +68,7 @@
             android:layout_marginBottom="48dp"
             android:text="Start time"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/textViewSignup"
+            app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -98,9 +98,7 @@
             tools:text="To" />
 
         <EditText
-
-
-
+            android:id="@+id/admin_etime"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
@@ -109,13 +107,13 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="18sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSignup"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/textViewSignup" />
+            app:layout_constraintStart_toEndOf="@+id/textView3" />
 
         <EditText
-
+            android:id="@+id/admin_rnumber"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
@@ -125,13 +123,13 @@
             android:ems="10"
             android:inputType="textPersonName"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/btnSearch"
+            app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/textView" />
 
         <EditText
-
+            android:id="@+id/admin_to"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
@@ -146,7 +144,7 @@
             app:layout_constraintStart_toEndOf="@+id/textview" />
 
         <EditText
-
+            android:id="@+id/admin_from"
             android:layout_width="0dp"
             android:layout_height="41dp"
             android:layout_marginStart="8dp"
@@ -161,7 +159,7 @@
             app:layout_constraintStart_toEndOf="@+id/textView4" />
 
         <EditText
-
+            android:id="@+id/admin_stime"
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
@@ -189,9 +187,7 @@
             android:textColorLink="#00CE1B1B"
             android:textSize="28sp"
             android:textStyle="bold"
-
-
-
+            app:layout_constraintBottom_toTopOf="@+id/admin_from"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="parent"
